Создал таблицу с регистрами и зависимостями "Регистры.xlsx"

--- a/BMS_4S_v1.0.vcxproj.filters
+++ b/BMS_4S_v1.0.vcxproj.filters
@@ -278,5 +278,13 @@
     <None Include="stm32.xml">
       <Filter>VisualGDB settings</Filter>
     </None>
+    <ClCompile Include="Src\memory.c">
+      <Filter>Source files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Inc\memory.h">
+      <Filter>Header files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
