--- a/BMS_4S_v1.0.vcxproj
+++ b/BMS_4S_v1.0.vcxproj
@@ -77,6 +77,7 @@
   <ItemGroup>
     <ClCompile Include="Src\gpio.c" />
     <ClCompile Include="Src\adc.c" />
+    <ClCompile Include="Src\memory.c" />
     <ClCompile Include="Src\usart.c" />
     <ClCompile Include="Src\stm32f0xx_it.c" />
     <ClCompile Include="Src\stm32f0xx_hal_msp.c" />
@@ -104,6 +105,7 @@
     <ClCompile Include="$(BSP_ROOT)\STM32F0xxxx\StartupFiles\startup_stm32f030x6.c" />
     <ClInclude Include="Inc\gpio.h" />
     <ClInclude Include="Inc\adc.h" />
+    <ClInclude Include="Inc\memory.h" />
     <ClInclude Include="Inc\usart.h" />
     <ClInclude Include="Inc\stm32f0xx_it.h" />
     <ClInclude Include="Inc\stm32f0xx_hal_conf.h" />
